TEST_PROGS                      = 

noinst_PROGRAMS                 = $(TEST_PROGS)
progs_ldadd                     = $(top_srcdir)/krengine/libkrengine.la

TEST_PROGS                     += kr_utils_alloc_test
kr_utils_alloc_test_SOURCES           = kr_utils_alloc_test.c
kr_utils_alloc_test_LDADD             = $(progs_ldadd)
kr_utils_alloc_test_CPPFLAGS          = -g 

TEST_PROGS                     += kr_utils_string_test
kr_utils_string_test_SOURCES          = kr_utils_string_test.c
kr_utils_string_test_LDADD            = $(progs_ldadd)
kr_utils_string_test_CPPFLAGS         = -g 

TEST_PROGS                     += kr_utils_datetime_test
kr_utils_datetime_test_SOURCES        = kr_utils_datetime_test.c
kr_utils_datetime_test_LDADD          = $(progs_ldadd)
kr_utils_datetime_test_CPPFLAGS       = -g 

TEST_PROGS                     += kr_utils_log_test
kr_utils_log_test_SOURCES             = kr_utils_log_test.c
kr_utils_log_test_LDADD               = $(progs_ldadd)
kr_utils_log_test_CPPFLAGS            = -g -I$(top_srcdir)/src

TEST_PROGS                     += kr_utils_list_test
kr_utils_list_test_SOURCES            = kr_utils_list_test.c
kr_utils_list_test_LDADD              = $(progs_ldadd)
kr_utils_list_test_CPPFLAGS           = -g 

TEST_PROGS                     += kr_utils_hashtable_test
kr_utils_hashtable_test_SOURCES       = kr_utils_hashtable_test.c
kr_utils_hashtable_test_LDADD         = $(progs_ldadd)
kr_utils_hashtable_test_CPPFLAGS      = -g 

TEST_PROGS                     += kr_utils_queue_test
kr_utils_queue_test_SOURCES           = kr_utils_queue_test.c
kr_utils_queue_test_LDADD             = $(progs_ldadd)
kr_utils_queue_test_CPPFLAGS          = -g 

TEST_PROGS                     += kr_utils_threadpool_test
kr_utils_threadpool_test_SOURCES      = kr_utils_threadpool_test.c
kr_utils_threadpool_test_LDADD        = $(progs_ldadd)
kr_utils_threadpool_test_CPPFLAGS     = -g 

TEST_PROGS                     += kr_utils_skiplist_test
kr_utils_skiplist_test_SOURCES        = kr_utils_skiplist_test.c
kr_utils_skiplist_test_LDADD          = $(progs_ldadd)
kr_utils_skiplist_test_CPPFLAGS       = -g 

TEST_PROGS                     += kr_utils_conhash_test
kr_utils_conhash_test_SOURCES         = kr_utils_conhash_test.c
kr_utils_conhash_test_LDADD           = $(progs_ldadd)
kr_utils_conhash_test_CPPFLAGS        = -g 

TEST_PROGS                     += kr_utils_cache_test
kr_utils_cache_test_SOURCES           = kr_utils_cache_test.c
kr_utils_cache_test_LDADD             = $(progs_ldadd)
kr_utils_cache_test_CPPFLAGS          = -g 

TEST_PROGS                     += kr_dbs_test
kr_dbs_test_SOURCES            = kr_dbs_test.c
kr_dbs_test_LDADD              = $(progs_ldadd)
kr_dbs_test_CPPFLAGS           = -g 

TEST_PROGS                     += kr_calc_test
kr_calc_test_SOURCES            = kr_calc_test.c
kr_calc_test_LDADD              = $(progs_ldadd)
kr_calc_test_CPPFLAGS           = -g 

TEST_PROGS                     += kr_param_test
kr_param_test_SOURCES           = kr_param_test.c
kr_param_test_LDADD             = $(progs_ldadd)
kr_param_test_CPPFLAGS          = -g 

TEST_PROGS                     += kr_input_test
kr_input_test_SOURCES           = kr_input_test.c
kr_input_test_LDADD             = $(progs_ldadd)
kr_input_test_CPPFLAGS          = -g 

TEST_PROGS                     += kr_output_test
kr_output_test_SOURCES          = kr_output_test.c
kr_output_test_LDADD            = $(progs_ldadd)
kr_output_test_CPPFLAGS         = -g 

TEST_PROGS                     += kr_db_test
kr_db_test_SOURCES              = kr_db_test.c
kr_db_test_LDADD                = $(progs_ldadd)
kr_db_test_CPPFLAGS             = -g 

TEST_PROGS                     += kr_data_test
kr_data_test_SOURCES            = kr_data_test.c
kr_data_test_LDADD              = $(progs_ldadd)
kr_data_test_CPPFLAGS           = -g 

